<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_100"
    tools:context=".YourInfo">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/tab_childview_margin_top"
        android:background="@drawable/design_top_corner_rounded"
        android:orientation="vertical"
        android:padding="@dimen/tab_childview_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/who_is_this_investment_for"
            android:textColor="@color/black"
            android:textSize="@dimen/yi_content_text_size" />

        <Spinner
            android:id="@+id/spinInvestment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/yi_content_margin_top"
            android:text="@string/is_the_equity_one_time_or_recurring"
            android:textColor="@color/black"
            android:textSize="@dimen/yi_content_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center|start"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fixed"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_text_size"
                android:textStyle="bold" />


            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:thumb="@drawable/thumb_custom_switch"
                app:track="@drawable/track_custom_switch"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/variable"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_text_size" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/yi_content_margin_top"
            android:text="@string/date_of_purchase"
            android:textColor="@color/black"
            android:textSize="@dimen/yi_content_text_size" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center|start"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgCalender"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:contentDescription="@string/calendar_image"
                android:src="@drawable/icon_calender" />

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_text_size" />

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/yi_content_margin_top"
            android:text="@string/number_of_units"
            android:textColor="@color/black"
            android:textSize="@dimen/yi_content_text_size" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/yi_content_margin_top"
            android:text="@string/purchase_price"
            android:textColor="@color/black"
            android:textSize="@dimen/yi_content_text_size" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <Button
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/yi_content_margin_top"
            android:background="@drawable/background_rounded_btn"
            android:text="@string/add_more"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_text_size" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabYourInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/green_400"
        android:contentDescription="@string/message_fab"
        android:src="@drawable/icon_chat"
        android:tint="@color/white"
        app:borderWidth="0dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_width="18sp"
        android:layout_height="18sp"
        android:background="@drawable/bg_round"
        android:elevation="6dp"
        android:gravity="center"
        android:text="@string/_2"
        android:textColor="@color/white"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="@id/fabYourInfo"
        app:layout_constraintTop_toTopOf="@id/fabYourInfo"
        tools:ignore="SmallSp" />


</androidx.constraintlayout.widget.ConstraintLayout>